<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="24dp"
    android:orientation="vertical"
    android:gravity="center">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:background="@color/white"
        android:gravity="center"
        android:orientation="horizontal">
        <ImageButton
            android:id="@+id/btnBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:contentDescription="@string/app_back_btn"
            android:src="@drawable/baseline_arrow_back_24" />
        <TextView
            android:id="@+id/lblSectionTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/create_section_title"
            android:textSize="24sp"
            android:textStyle="bold" />
    </LinearLayout>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/general_name"
        android:inputType="text"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@color/primary" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/general_surname"
        android:inputType="textPassword"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@color/primary"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/general_id"
        android:inputType="number"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@color/primary"/>
    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/swIsPartner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_is_partner"
        android:drawableTint="@color/primary"
        android:layout_marginBottom="10dp"/>
    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/swHealthCheckDone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_health_check"
        android:drawableTint="@color/primary"
        android:layout_marginBottom="10dp"/>
    <Button
        android:id="@+id/btnSave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/general_save"
        android:backgroundTint="@color/primary"
        android:layout_marginBottom="10dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_notes"
        android:textSize="12sp"
        android:gravity="center"
        android:layout_marginBottom="20dp"/>
</LinearLayout>