<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="bottom"
    android:padding="24dp">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/primary"
        android:text="@string/payment_title"/>
    <TextView
        android:id="@+id/lblPaymentStudentName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="24sp"
        android:text="Carlos Mendoza"
        android:layout_marginBottom="16dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:background="@drawable/toast"
        android:backgroundTint="@color/secondary"
        android:padding="16dp"
        android:layout_marginBottom="16dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/primary"
            android:textSize="12sp"
            android:text="@string/payment_amount"/>
        <TextView
            android:id="@+id/lblPaymentAmount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="$ 5000,00"
            android:textSize="32sp"
            android:textStyle="bold"
            android:textColor="@color/primary"/>
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/payment_method"
        android:textSize="12sp"
        android:textStyle="bold"/>
    <RadioGroup
        android:id="@+id/rgPaymentMethod"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal">
        <RadioButton
            android:id="@+id/rbCash"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Efectivo"
            android:checked="true"
            android:textSize="12sp"/>
        <RadioButton
            android:id="@+id/rbCard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Tarjeta"
            android:textSize="12sp"/>
    </RadioGroup>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/payment_parts"
        android:textSize="12sp"
        android:textStyle="bold"/>
    <RadioGroup
        android:id="@+id/rgPaymentParts"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal">
        <RadioButton
            android:id="@+id/rbParts3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/payment_parts_3"
            android:enabled="false"
            android:textSize="12sp"/>
        <RadioButton
            android:id="@+id/rbParts6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/payment_parts_6"
            android:enabled="false"
            android:textSize="12sp" />
    </RadioGroup>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/toast"
        android:backgroundTint="#F8FAFC"
        android:padding="8sp"
        android:layout_marginVertical="8sp">
        <TextView
            android:id="@+id/lblPaymentPeriod"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Periodo 01/10/2026 - 31/10/2026"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="12sp" />
    </LinearLayout>
    <Button
        android:id="@+id/btnPay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/member_card_pay"/>
    <Button
        android:id="@+id/btnCancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:textColor="@color/black"
        android:text="@string/general_cancel"/>
</LinearLayout>
