<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="top"
    android:orientation="vertical"
    android:padding="24dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:background="@color/white"
        android:gravity="center"
        android:orientation="horizontal">
        <ImageButton
            android:id="@+id/btnBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:contentDescription="@string/app_back_btn"
            android:src="@drawable/baseline_arrow_back_24" />
        <TextView
            android:id="@+id/lblSectionTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Credencial"
            android:textSize="24sp"
            android:textStyle="bold" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/credential"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="24dp"
        android:background="@drawable/border_layout">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="start">
                <ImageView
                    android:id="@+id/imgLogo"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_marginEnd="20dp"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/logo_club" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center_vertical">
                <TextView
                    android:id="@+id/lblUsername"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_name"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    android:textColor="@color/primary"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/credential_club_subsidiary"
                    android:textSize="16sp" />
            </LinearLayout>
        </LinearLayout>
        <ImageView
            android:id="@+id/imgProfilePicture"
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:layout_marginBottom="16dp"
            android:contentDescription="@string/credential_picture_description"
            android:src="@drawable/avatar" />
        <TextView
            android:id="@+id/lblStudentFullName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="Carlos Mendoza"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="@color/primary"/>
        <TextView
            android:id="@+id/lblStudentDni"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:gravity="center"
            android:text="DNI 33222111"
            android:textSize="16sp" />
        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:columnCount="2">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center_horizontal"
                android:layout_columnWeight="5">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/credential_category"
                    android:textSize="16sp" />
                <TextView
                    android:id="@+id/lblStudentCategory"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="SOCIO ACTIVO"
                    android:textAlignment="center"
                    android:textSize="12sp"
                    android:textStyle="bold" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center_vertical|center_horizontal"
                android:layout_columnWeight="5">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:text="@string/credential_start"
                    android:textSize="16sp" />
                <TextView
                    android:id="@+id/lblStudentStartDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="MARZO 2025"
                    android:textAlignment="center"
                    android:textSize="12sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </GridLayout>
    </LinearLayout>
    <Button
        android:id="@+id/btnSaveCredential"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/primary"
        android:text="@string/general_save" />
    <Button
        android:id="@+id/btnShareCredential"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/secondary"
        android:text="@string/general_share"
        android:textColor="@color/black" />
</LinearLayout>
